Amazon_EKS/Solution-1/v2/07_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: rabbitmq-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /helloworld
        backend:
          serviceName: hello-world
          servicePort: 60000
      - path: /rabbitmq/*
        backend:
          serviceName: rabbitmq-management
          servicePort: 15672
